# pyproject.toml

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binder-launcher"
version = "0.1.2"
dependencies = [
    "jupyter_server",
    "jupyterlab",
    "python-dotenv",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["binder_launcher*"]
